fixed text alignment in experience section

--- a/style.css
+++ b/style.css
@@ -394,6 +394,8 @@ article {
     width: 10rem;
     justify-content: space-around;
     gap: 0.5rem;
+    align-items: center;
+    text-align: center;
 }
 
 .fa-circle-check {
